LPD-18709 Fix Gaps

--- a/workspaces/liferay-marketplace-workspace/client-extensions/liferay-marketplace-custom-element/src/pages/ReviewAndSubmitAppPage/CardSectionsBody.scss
+++ b/workspaces/liferay-marketplace-workspace/client-extensions/liferay-marketplace-custom-element/src/pages/ReviewAndSubmitAppPage/CardSectionsBody.scss
@@ -109,8 +109,13 @@
 
 	&-tags {
 		display: flex;
+		flex-wrap: wrap;
 		gap: 8px;
 		margin-top: 22px;
+
+		.tag {
+			white-space: nowarp;
+		}
 	}
 
 	&-version {
